crates/tui/src/component/snapshots/yozefu_tui__component__records_component_test__draw.snap
---
source: crates/tui/src/component/records_component_test.rs
expression: terminal.backend()
---
"╭ Records ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│Timestamp                             Topic   Offset         Key  Value                                               │"
"│                                                                                                                      │"
"│1970-01-01T01:00:00.000+01:00  movi..ers[0]      314  7f12bd3b..                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
