crates/tui/src/component/snapshots/yozefu_tui__component__records_component_test__draw_descending_order.snap
---
source: crates/tui/src/component/records_component_test.rs
expression: terminal.backend()
---
"╭ Records ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│Timestamp ↓                                  Topic   Offset         Key  Value                        2 / 1           │"
"│                                                                                                                      │"
"│1970-01-01T01:00:00.000+01:00   french-pastries[0]      316  french-p..  { "name" : "Pain au Chocolat" }              │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
